WAS 실행 프로파일 정리
1. JSTL 라이브러리에 대해, Tomcat은 compile, Jetty는 Provided로 처리
   Maven 프로필을 설정함.

2. WAS 실행 프로필을 4가지로 분리
   1. Jetty 실행
      mvnw clean jetty:run   (기본 프로필이라 프로필 정하지 않아도 됨)
   2. Scouter 적용하여 Jetty 실행
      mvnw -Pjetty-run-with-scouter clean jetty:run 가 기본 명령인데, 추가 옵션을 전달해야되서, 프로젝트 루트의 배치파일을 실행할 것.
   3. Tomcat 실행
      mvnw  -DskipTests -Ptomcat-run clean package cargo:run
   4. Scouter 적용하여 Tomcat 실행
      mvnw  -DskipTests -Ptomcat-run-with-scouter clean package cargo:run 가 기본 명령인데, 추가 옵션을 전달해야되서, 프로젝트 루트의 배치파일을 실행할 것.

3. Scouter 적용 실행 배치파일 변경
   모든걸 최신으로 업그레이드한 my-board 프로젝트는 데이터 수집이 제대로 안된다. ㅠㅠ
   Xlog 점이 안찍힘...