@@ -84,204 +84,6 @@
         </resources>
       </build>
     </profile>
-
-    <!-- 기본 웹 애플리케이션 실행 : jetty 또는 tomcat -->
-    <!-- 부모 pom.xml 에도 있는 설정이지만, 설정을 조금씩 바꿔야할지몰라서 일단은 하위에도 내려놓자~ -->
-    <profile>
-      <id>default-webapp-run</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <!-- Jetty 서버 구동 -->
-          <!-- 도움말 자세히보기: mvnw jetty:help -Ddetail=true -Dgoal=run -->
-          <plugin>
-            <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-maven-plugin -->
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.version}</version>
-            <configuration>
-              <httpConnector>
-                <!--host>localhost</host-->
-                <port>${jetty.port}</port>
-              </httpConnector>
-              <webApp>
-                <contextPath>${jetty-context-path}</contextPath>
-                <descriptor>${web-xml-location}</descriptor>
-                <sessionHandler>
-                  <sessionIdPathParameterName>none</sessionIdPathParameterName>
-                </sessionHandler>
-              </webApp>
-              <deployMode>EMBED</deployMode>
-              <stopKey>CTRL+C</stopKey>
-              <stopPort>8999</stopPort>
-              <!-- 9.x 설정: <scanIntervalSeconds> 대신 <scan> 사용 -->
-              <!--
-                변경 감지 자동 재시작시 ContextLoaderListener가 제대로 실행되지 않는 오류가 발생한다.
-                설정을 -1로하여 자동 재시작이 일어나지 않도록 한다.
-               -->
-              <scan>${jetty-auto-deploy-seconds}</scan>
-              <scanTargetPatterns>
-                <scanTargetPattern>
-                  <directory>src/main/webapp/WEB-INF</directory>
-                  <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                  </includes>
-                  <excludes>
-                    <exclude>**/*.jsp</exclude>
-                  </excludes>
-                </scanTargetPattern>
-              </scanTargetPatterns>
-            </configuration>
-          </plugin>
-
-          <!-- 실제 Tomcat 9 배포 실행 테스트 -->
-          <!-- mvn clean package -DskipTests cargo:run -->
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven3-plugin</artifactId>
-            <version>${cargo.version}</version>
-            <configuration>
-              <container>
-                <containerId>${cargo-tomcat.containerId}</containerId>
-                <systemProperties>
-                  <file.encoding>UTF-8</file.encoding>
-                </systemProperties>
-                <zipUrlInstaller>
-                  <url>
-                    https://repo.maven.apache.org/maven2/org/apache/tomcat/tomcat/${cargo-tomcat.version}/tomcat-${cargo-tomcat.version}.zip
-                  </url>
-                  <downloadDir>${project.build.directory}/downloads</downloadDir>
-                  <extractDir>${project.build.directory}/extracts</extractDir>
-                </zipUrlInstaller>
-              </container>
-              <configuration>
-                <type>standalone</type>
-                <properties>
-                  <cargo.servlet.port>${cargo-server-port}</cargo.servlet.port>
-                </properties>
-              </configuration>
-              <deployables>
-                <deployable>
-                  <groupId>${project.groupId}</groupId>
-                  <artifactId>${project.artifactId}</artifactId>
-                  <type>war</type>
-                  <properties>
-                    <context>${cargo-context-path}</context>
-                  </properties>
-                </deployable>
-              </deployables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Scouter를 활성화하여 웹 애플리케이션 실행 : jetty 또는 tomcat -->
-    <profile>
-      <id>webapp-run-with-scouter</id>
-      <build>
-        <plugins>
-          <!-- Jetty 서버 구동 -->
-          <!-- 도움말 자세히보기: mvnw jetty:help -Ddetail=true -Dgoal=run -->
-          <plugin>
-            <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-maven-plugin -->
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.version}</version>
-            <configuration>
-              <httpConnector>
-                <!--host>localhost</host-->
-                <port>${jetty.port}</port>
-              </httpConnector>
-              <!-- jvmArgs는 FORK 모드에서만 동작한다. -->
-              <jvmArgs><!--
-                  -->-javaagent:${scouter.agent.lib} <!--
-                  -->--illegal-access=warn <!--
-                  -->--add-opens=java.base/java.lang=ALL-UNNAMED <!--
-                  -->-Djdk.attach.allowAttachSelf=true <!--
-                  -->-Dscouter.config=${project.basedir}/../../${scouter.config.file} <!--
-              --></jvmArgs>
-              <webApp>
-                <contextPath>${jetty-context-path}</contextPath>
-                <descriptor>${web-xml-location}</descriptor>
-                <sessionHandler>
-                  <sessionIdPathParameterName>none</sessionIdPathParameterName>
-                </sessionHandler>
-              </webApp>
-              <deployMode>FORK</deployMode>
-              <stopKey>CTRL+C</stopKey>
-              <stopPort>8999</stopPort>
-              <!-- 9.x 설정: <scanIntervalSeconds> 대신 <scan> 사용 -->
-              <!--
-                변경 감지 자동 재시작시 ContextLoaderListener가 제대로 실행되지 않는 오류가 발생한다.
-                설정을 -1로하여 자동 재시작이 일어나지 않도록 한다.
-               -->
-              <scan>${jetty-auto-deploy-seconds}</scan>
-              <scanTargetPatterns>
-                <scanTargetPattern>
-                  <directory>src/main/webapp/WEB-INF</directory>
-                  <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                  </includes>
-                  <excludes>
-                    <exclude>**/*.jsp</exclude>
-                  </excludes>
-                </scanTargetPattern>
-              </scanTargetPatterns>
-            </configuration>
-          </plugin>
-
-          <!-- 실제 Tomcat 9 배포 실행 테스트 -->
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven3-plugin</artifactId>
-            <version>${cargo.version}</version>
-            <configuration>
-              <container>
-                <containerId>${cargo-tomcat.containerId}</containerId>
-                <systemProperties>
-                  <file.encoding>UTF-8</file.encoding>
-                  <scouter.config>${project.basedir}/../../${scouter.config.file}</scouter.config>
-                </systemProperties>
-                <zipUrlInstaller>
-                  <url>
-                    https://repo.maven.apache.org/maven2/org/apache/tomcat/tomcat/${cargo-tomcat.version}/tomcat-${cargo-tomcat.version}.zip
-                  </url>
-                  <downloadDir>${project.build.directory}/downloads</downloadDir>
-                  <extractDir>${project.build.directory}/extracts</extractDir>
-                </zipUrlInstaller>
-              </container>
-              <configuration>
-                <type>standalone</type>
-                <properties>
-                  <cargo.jvmargs><!--
-                  -->-javaagent:${scouter.agent.lib} <!--
-                  -->--illegal-access=warn <!--
-                  -->--add-opens=java.base/java.lang=ALL-UNNAMED <!--
-                  -->-Djdk.attach.allowAttachSelf=true <!--
-                  --></cargo.jvmargs>
-                  <cargo.servlet.port>${cargo-server-port}</cargo.servlet.port>
-                </properties>
-              </configuration>
-              <deployables>
-                <deployable>
-                  <groupId>${project.groupId}</groupId>
-                  <artifactId>${project.artifactId}</artifactId>
-                  <type>war</type>
-                  <properties>
-                    <context>${cargo-context-path}</context>
-                  </properties>
-                </deployable>
-              </deployables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
   </profiles>
 
   <dependencies>
@@ -372,14 +174,14 @@
       <groupId>jakarta.servlet.jsp.jstl</groupId>
       <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
       <version>${jakarta.servlet.jsp.jstl-api.version}</version>
-      <scope>provided</scope>
+      <scope>${jstl-scope.type}</scope>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.web</groupId>
       <artifactId>jakarta.servlet.jsp.jstl</artifactId>
       <version>${jakarta.servlet.jsp.jstl.version}</version>
-      <scope>provided</scope>
+      <scope>${jstl-scope.type}</scope>
     </dependency>
 
     <!-- https://github.com/sargue/java-time-jsptags -->
@@ -590,6 +392,7 @@
         </executions>
       </plugin>
       -->
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
